Transferred all MoveData storage to MoveData from DataHelper